parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALIAS
    ARRAY
    BEGIN
    BIGGEREQUAL
    BREAK
    CASE
    CLASS
    DECREMENT
    DEFINED
    DIVIDE
    ELSE
    ELSIF
    ENSURE
    EQUAL
    FALSE
    FLOAT
    FOR
    HASH
    IN
    INCREMENT
    MINUS
    MODULE
    MULTI_LINE_COMMENT
    NEXT
    NIL
    NOTEQUAL
    PLUS
    POWER
    REDO
    RESCUE
    RETRY
    RETURN
    SELF
    SEMICOLON
    SINGLE_LINE_COMMENT
    SMALLER
    SMALLEREQUAL
    SUPER
    TRUE
    UNLESS
    UNTIL
    WHEN
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement statement_list
Rule 4     statement -> function_def
Rule 5     statement -> assignment
Rule 6     statement -> if_statement
Rule 7     statement -> while_statement
Rule 8     statement -> puts_statement
Rule 9     statement -> gets_statement
Rule 10    statement -> expression
Rule 11    variable -> VARIABLE_LOCAL
Rule 12    variable -> VARIABLE_GLOBAL
Rule 13    variable -> VARIABLE_INSTANCIA
Rule 14    variable -> VARIABLE_CLASE
Rule 15    function_def -> DEF VARIABLE_LOCAL LPAREN param_list RPAREN expression END
Rule 16    param_list -> VARIABLE_LOCAL COMMA VARIABLE_LOCAL
Rule 17    param_list -> VARIABLE_LOCAL
Rule 18    param_list -> empty
Rule 19    assignment -> variable ASSIGNATION expression
Rule 20    while_statement -> WHILE expression DO statement_list END
Rule 21    if_statement -> IF expression statement_list END
Rule 22    puts_statement -> PUTS arg_list
Rule 23    gets_statement -> VARIABLE_LOCAL ASSIGNATION GETS
Rule 24    expression -> expression AND expression
Rule 25    expression -> expression OR expression
Rule 26    expression -> NOT expression
Rule 27    expression -> INTEGER
Rule 28    expression -> STRING
Rule 29    expression -> variable
Rule 30    expression -> array
Rule 31    expression -> array_access
Rule 32    expression -> function_call
Rule 33    expression -> binary_operation
Rule 34    expression -> GETS
Rule 35    expression -> hash
Rule 36    array -> LBRACKET array_elements RBRACKET
Rule 37    array_elements -> INTEGER
Rule 38    array_elements -> INTEGER COMMA array_elements
Rule 39    array_access -> VARIABLE_LOCAL LBRACKET INTEGER RBRACKET
Rule 40    hash -> LBRACE hash_elements RBRACE
Rule 41    hash_elements -> hash_element
Rule 42    hash_elements -> hash_element COMMA hash_elements
Rule 43    hash_elements -> empty
Rule 44    hash_element -> VARIABLE_LOCAL COLON STRING
Rule 45    function_call -> VARIABLE_LOCAL LPAREN arg_list RPAREN
Rule 46    arg_list -> expression
Rule 47    arg_list -> expression COMMA arg_list
Rule 48    arg_list -> empty
Rule 49    binary_operation -> expression TIMES expression
Rule 50    binary_operation -> expression BIGGER expression
Rule 51    empty -> <empty>

Terminals, with rules where they appear

ALIAS                : 
AND                  : 24
ARRAY                : 
ASSIGNATION          : 19 23
BEGIN                : 
BIGGER               : 50
BIGGEREQUAL          : 
BREAK                : 
CASE                 : 
CLASS                : 
COLON                : 44
COMMA                : 16 38 42 47
DECREMENT            : 
DEF                  : 15
DEFINED              : 
DIVIDE               : 
DO                   : 20
ELSE                 : 
ELSIF                : 
END                  : 15 20 21
ENSURE               : 
EQUAL                : 
FALSE                : 
FLOAT                : 
FOR                  : 
GETS                 : 23 34
HASH                 : 
IF                   : 21
IN                   : 
INCREMENT            : 
INTEGER              : 27 37 38 39
LBRACE               : 40
LBRACKET             : 36 39
LPAREN               : 15 45
MINUS                : 
MODULE               : 
MULTI_LINE_COMMENT   : 
NEXT                 : 
NIL                  : 
NOT                  : 26
NOTEQUAL             : 
OR                   : 25
PLUS                 : 
POWER                : 
PUTS                 : 22
RBRACE               : 40
RBRACKET             : 36 39
REDO                 : 
RESCUE               : 
RETRY                : 
RETURN               : 
RPAREN               : 15 45
SELF                 : 
SEMICOLON            : 
SINGLE_LINE_COMMENT  : 
SMALLER              : 
SMALLEREQUAL         : 
STRING               : 28 44
SUPER                : 
TIMES                : 49
TRUE                 : 
UNLESS               : 
UNTIL                : 
VARIABLE_CLASE       : 14
VARIABLE_GLOBAL      : 12
VARIABLE_INSTANCIA   : 13
VARIABLE_LOCAL       : 11 15 16 16 17 23 39 44 45
WHEN                 : 
WHILE                : 20
YIELD                : 
error                : 

Nonterminals, with rules where they appear

arg_list             : 22 45 47
array                : 30
array_access         : 31
array_elements       : 36 38
assignment           : 5
binary_operation     : 33
empty                : 18 43 48
expression           : 10 15 19 20 21 24 24 25 25 26 46 47 49 49 50 50
function_call        : 32
function_def         : 4
gets_statement       : 9
hash                 : 35
hash_element         : 41 42
hash_elements        : 40 42
if_statement         : 6
param_list           : 15
program              : 0
puts_statement       : 8
statement            : 2 3
statement_list       : 1 3 20 21
variable             : 19 29
while_statement      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . function_def
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . puts_statement
    (9) statement -> . gets_statement
    (10) statement -> . expression
    (15) function_def -> . DEF VARIABLE_LOCAL LPAREN param_list RPAREN expression END
    (19) assignment -> . variable ASSIGNATION expression
    (21) if_statement -> . IF expression statement_list END
    (20) while_statement -> . WHILE expression DO statement_list END
    (22) puts_statement -> . PUTS arg_list
    (23) gets_statement -> . VARIABLE_LOCAL ASSIGNATION GETS
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . INTEGER
    (28) expression -> . STRING
    (29) expression -> . variable
    (30) expression -> . array
    (31) expression -> . array_access
    (32) expression -> . function_call
    (33) expression -> . binary_operation
    (34) expression -> . GETS
    (35) expression -> . hash
    (11) variable -> . VARIABLE_LOCAL
    (12) variable -> . VARIABLE_GLOBAL
    (13) variable -> . VARIABLE_INSTANCIA
    (14) variable -> . VARIABLE_CLASE
    (36) array -> . LBRACKET array_elements RBRACKET
    (39) array_access -> . VARIABLE_LOCAL LBRACKET INTEGER RBRACKET
    (45) function_call -> . VARIABLE_LOCAL LPAREN arg_list RPAREN
    (49) binary_operation -> . expression TIMES expression
    (50) binary_operation -> . expression BIGGER expression
    (40) hash -> . LBRACE hash_elements RBRACE

    DEF             shift and go to state 11
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    PUTS            shift and go to state 16
    VARIABLE_LOCAL  shift and go to state 12
    NOT             shift and go to state 18
    INTEGER         shift and go to state 19
    STRING          shift and go to state 20
    GETS            shift and go to state 17
    VARIABLE_GLOBAL shift and go to state 26
    VARIABLE_INSTANCIA shift and go to state 27
    VARIABLE_CLASE  shift and go to state 28
    LBRACKET        shift and go to state 29
    LBRACE          shift and go to state 30

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    function_def                   shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    puts_statement                 shift and go to state 8
    gets_statement                 shift and go to state 9
    expression                     shift and go to state 10
    variable                       shift and go to state 13
    array                          shift and go to state 21
    array_access                   shift and go to state 22
    function_call                  shift and go to state 23
    binary_operation               shift and go to state 24
    hash                           shift and go to state 25

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) statement_list -> statement .
    (3) statement_list -> statement . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement statement_list
    (4) statement -> . function_def
    (5) statement -> . assignment
    (6) statement -> . if_statement
    (7) statement -> . while_statement
    (8) statement -> . puts_statement
    (9) statement -> . gets_statement
    (10) statement -> . expression
    (15) function_def -> . DEF VARIABLE_LOCAL LPAREN param_list RPAREN expression END
    (19) assignment -> . variable ASSIGNATION expression
    (21) if_statement -> . IF expression statement_list END
    (20) while_statement -> . WHILE expression DO statement_list END
    (22) puts_statement -> . PUTS arg_list
    (23) gets_statement -> . VARIABLE_LOCAL ASSIGNATION GETS
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . INTEGER
    (28) expression -> . STRING
    (29) expression -> . variable
    (30) expression -> . array
    (31) expression -> . array_access
    (32) expression -> . function_call
    (33) expression -> . binary_operation
    (34) expression -> . GETS
    (35) expression -> . hash
    (11) variable -> . VARIABLE_LOCAL
    (12) variable -> . VARIABLE_GLOBAL
    (13) variable -> . VARIABLE_INSTANCIA
    (14) variable -> . VARIABLE_CLASE
    (36) array -> . LBRACKET array_elements RBRACKET
    (39) array_access -> . VARIABLE_LOCAL LBRACKET INTEGER RBRACKET
    (45) function_call -> . VARIABLE_LOCAL LPAREN arg_list RPAREN
    (49) binary_operation -> . expression TIMES expression
    (50) binary_operation -> . expression BIGGER expression
    (40) hash -> . LBRACE hash_elements RBRACE

    $end            reduce using rule 2 (statement_list -> statement .)
    END             reduce using rule 2 (statement_list -> statement .)
    DEF             shift and go to state 11
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    PUTS            shift and go to state 16
    VARIABLE_LOCAL  shift and go to state 12
    NOT             shift and go to state 18
    INTEGER         shift and go to state 19
    STRING          shift and go to state 20
    GETS            shift and go to state 17
    VARIABLE_GLOBAL shift and go to state 26
    VARIABLE_INSTANCIA shift and go to state 27
    VARIABLE_CLASE  shift and go to state 28
    LBRACKET        shift and go to state 29
    LBRACE          shift and go to state 30

    statement                      shift and go to state 3
    statement_list                 shift and go to state 31
    function_def                   shift and go to state 4
    assignment                     shift and go to state 5
    if_statement                   shift and go to state 6
    while_statement                shift and go to state 7
    puts_statement                 shift and go to state 8
    gets_statement                 shift and go to state 9
    expression                     shift and go to state 10
    variable                       shift and go to state 13
    array                          shift and go to state 21
    array_access                   shift and go to state 22
    function_call                  shift and go to state 23
    binary_operation               shift and go to state 24
    hash                           shift and go to state 25

state 4

    (4) statement -> function_def .

    DEF             reduce using rule 4 (statement -> function_def .)
    IF              reduce using rule 4 (statement -> function_def .)
    WHILE           reduce using rule 4 (statement -> function_def .)
    PUTS            reduce using rule 4 (statement -> function_def .)
    VARIABLE_LOCAL  reduce using rule 4 (statement -> function_def .)
    NOT             reduce using rule 4 (statement -> function_def .)
    INTEGER         reduce using rule 4 (statement -> function_def .)
    STRING          reduce using rule 4 (statement -> function_def .)
    GETS            reduce using rule 4 (statement -> function_def .)
    VARIABLE_GLOBAL reduce using rule 4 (statement -> function_def .)
    VARIABLE_INSTANCIA reduce using rule 4 (statement -> function_def .)
    VARIABLE_CLASE  reduce using rule 4 (statement -> function_def .)
    LBRACKET        reduce using rule 4 (statement -> function_def .)
    LBRACE          reduce using rule 4 (statement -> function_def .)
    $end            reduce using rule 4 (statement -> function_def .)
    END             reduce using rule 4 (statement -> function_def .)


state 5

    (5) statement -> assignment .

    DEF             reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    PUTS            reduce using rule 5 (statement -> assignment .)
    VARIABLE_LOCAL  reduce using rule 5 (statement -> assignment .)
    NOT             reduce using rule 5 (statement -> assignment .)
    INTEGER         reduce using rule 5 (statement -> assignment .)
    STRING          reduce using rule 5 (statement -> assignment .)
    GETS            reduce using rule 5 (statement -> assignment .)
    VARIABLE_GLOBAL reduce using rule 5 (statement -> assignment .)
    VARIABLE_INSTANCIA reduce using rule 5 (statement -> assignment .)
    VARIABLE_CLASE  reduce using rule 5 (statement -> assignment .)
    LBRACKET        reduce using rule 5 (statement -> assignment .)
    LBRACE          reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    END             reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> if_statement .

    DEF             reduce using rule 6 (statement -> if_statement .)
    IF              reduce using rule 6 (statement -> if_statement .)
    WHILE           reduce using rule 6 (statement -> if_statement .)
    PUTS            reduce using rule 6 (statement -> if_statement .)
    VARIABLE_LOCAL  reduce using rule 6 (statement -> if_statement .)
    NOT             reduce using rule 6 (statement -> if_statement .)
    INTEGER         reduce using rule 6 (statement -> if_statement .)
    STRING          reduce using rule 6 (statement -> if_statement .)
    GETS            reduce using rule 6 (statement -> if_statement .)
    VARIABLE_GLOBAL reduce using rule 6 (statement -> if_statement .)
    VARIABLE_INSTANCIA reduce using rule 6 (statement -> if_statement .)
    VARIABLE_CLASE  reduce using rule 6 (statement -> if_statement .)
    LBRACKET        reduce using rule 6 (statement -> if_statement .)
    LBRACE          reduce using rule 6 (statement -> if_statement .)
    $end            reduce using rule 6 (statement -> if_statement .)
    END             reduce using rule 6 (statement -> if_statement .)


state 7

    (7) statement -> while_statement .

    DEF             reduce using rule 7 (statement -> while_statement .)
    IF              reduce using rule 7 (statement -> while_statement .)
    WHILE           reduce using rule 7 (statement -> while_statement .)
    PUTS            reduce using rule 7 (statement -> while_statement .)
    VARIABLE_LOCAL  reduce using rule 7 (statement -> while_statement .)
    NOT             reduce using rule 7 (statement -> while_statement .)
    INTEGER         reduce using rule 7 (statement -> while_statement .)
    STRING          reduce using rule 7 (statement -> while_statement .)
    GETS            reduce using rule 7 (statement -> while_statement .)
    VARIABLE_GLOBAL reduce using rule 7 (statement -> while_statement .)
    VARIABLE_INSTANCIA reduce using rule 7 (statement -> while_statement .)
    VARIABLE_CLASE  reduce using rule 7 (statement -> while_statement .)
    LBRACKET        reduce using rule 7 (statement -> while_statement .)
    LBRACE          reduce using rule 7 (statement -> while_statement .)
    $end            reduce using rule 7 (statement -> while_statement .)
    END             reduce using rule 7 (statement -> while_statement .)


state 8

    (8) statement -> puts_statement .

    DEF             reduce using rule 8 (statement -> puts_statement .)
    IF              reduce using rule 8 (statement -> puts_statement .)
    WHILE           reduce using rule 8 (statement -> puts_statement .)
    PUTS            reduce using rule 8 (statement -> puts_statement .)
    VARIABLE_LOCAL  reduce using rule 8 (statement -> puts_statement .)
    NOT             reduce using rule 8 (statement -> puts_statement .)
    INTEGER         reduce using rule 8 (statement -> puts_statement .)
    STRING          reduce using rule 8 (statement -> puts_statement .)
    GETS            reduce using rule 8 (statement -> puts_statement .)
    VARIABLE_GLOBAL reduce using rule 8 (statement -> puts_statement .)
    VARIABLE_INSTANCIA reduce using rule 8 (statement -> puts_statement .)
    VARIABLE_CLASE  reduce using rule 8 (statement -> puts_statement .)
    LBRACKET        reduce using rule 8 (statement -> puts_statement .)
    LBRACE          reduce using rule 8 (statement -> puts_statement .)
    $end            reduce using rule 8 (statement -> puts_statement .)
    END             reduce using rule 8 (statement -> puts_statement .)


state 9

    (9) statement -> gets_statement .

    DEF             reduce using rule 9 (statement -> gets_statement .)
    IF              reduce using rule 9 (statement -> gets_statement .)
    WHILE           reduce using rule 9 (statement -> gets_statement .)
    PUTS            reduce using rule 9 (statement -> gets_statement .)
    VARIABLE_LOCAL  reduce using rule 9 (statement -> gets_statement .)
    NOT             reduce using rule 9 (statement -> gets_statement .)
    INTEGER         reduce using rule 9 (statement -> gets_statement .)
    STRING          reduce using rule 9 (statement -> gets_statement .)
    GETS            reduce using rule 9 (statement -> gets_statement .)
    VARIABLE_GLOBAL reduce using rule 9 (statement -> gets_statement .)
    VARIABLE_INSTANCIA reduce using rule 9 (statement -> gets_statement .)
    VARIABLE_CLASE  reduce using rule 9 (statement -> gets_statement .)
    LBRACKET        reduce using rule 9 (statement -> gets_statement .)
    LBRACE          reduce using rule 9 (statement -> gets_statement .)
    $end            reduce using rule 9 (statement -> gets_statement .)
    END             reduce using rule 9 (statement -> gets_statement .)


state 10

    (10) statement -> expression .
    (24) expression -> expression . AND expression
    (25) expression -> expression . OR expression
    (49) binary_operation -> expression . TIMES expression
    (50) binary_operation -> expression . BIGGER expression

    DEF             reduce using rule 10 (statement -> expression .)
    IF              reduce using rule 10 (statement -> expression .)
    WHILE           reduce using rule 10 (statement -> expression .)
    PUTS            reduce using rule 10 (statement -> expression .)
    VARIABLE_LOCAL  reduce using rule 10 (statement -> expression .)
    NOT             reduce using rule 10 (statement -> expression .)
    INTEGER         reduce using rule 10 (statement -> expression .)
    STRING          reduce using rule 10 (statement -> expression .)
    GETS            reduce using rule 10 (statement -> expression .)
    VARIABLE_GLOBAL reduce using rule 10 (statement -> expression .)
    VARIABLE_INSTANCIA reduce using rule 10 (statement -> expression .)
    VARIABLE_CLASE  reduce using rule 10 (statement -> expression .)
    LBRACKET        reduce using rule 10 (statement -> expression .)
    LBRACE          reduce using rule 10 (statement -> expression .)
    $end            reduce using rule 10 (statement -> expression .)
    END             reduce using rule 10 (statement -> expression .)
    AND             shift and go to state 32
    OR              shift and go to state 33
    TIMES           shift and go to state 34
    BIGGER          shift and go to state 35


state 11

    (15) function_def -> DEF . VARIABLE_LOCAL LPAREN param_list RPAREN expression END

    VARIABLE_LOCAL  shift and go to state 36


state 12

    (23) gets_statement -> VARIABLE_LOCAL . ASSIGNATION GETS
    (11) variable -> VARIABLE_LOCAL .
    (39) array_access -> VARIABLE_LOCAL . LBRACKET INTEGER RBRACKET
    (45) function_call -> VARIABLE_LOCAL . LPAREN arg_list RPAREN

  ! shift/reduce conflict for ASSIGNATION resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
    ASSIGNATION     shift and go to state 37
    AND             reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    OR              reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    TIMES           reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    BIGGER          reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    DEF             reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    IF              reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    WHILE           reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    PUTS            reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    VARIABLE_LOCAL  reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    NOT             reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    INTEGER         reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    STRING          reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    GETS            reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    VARIABLE_GLOBAL reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    VARIABLE_INSTANCIA reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    VARIABLE_CLASE  reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    LBRACE          reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    $end            reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    END             reduce using rule 11 (variable -> VARIABLE_LOCAL .)
    LBRACKET        shift and go to state 38
    LPAREN          shift and go to state 39

  ! ASSIGNATION     [ reduce using rule 11 (variable -> VARIABLE_LOCAL .) ]
  ! LBRACKET        [ reduce using rule 11 (variable -> VARIABLE_LOCAL .) ]


state 13

    (19) assignment -> variable . ASSIGNATION expression
    (29) expression -> variable .

    ASSIGNATION     shift and go to state 40
    AND             reduce using rule 29 (expression -> variable .)
    OR              reduce using rule 29 (expression -> variable .)
    TIMES           reduce using rule 29 (expression -> variable .)
    BIGGER          reduce using rule 29 (expression -> variable .)
    DEF             reduce using rule 29 (expression -> variable .)
    IF              reduce using rule 29 (expression -> variable .)
    WHILE           reduce using rule 29 (expression -> variable .)
    PUTS            reduce using rule 29 (expression -> variable .)
    VARIABLE_LOCAL  reduce using rule 29 (expression -> variable .)
    NOT             reduce using rule 29 (expression -> variable .)
    INTEGER         reduce using rule 29 (expression -> variable .)
    STRING          reduce using rule 29 (expression -> variable .)
    GETS            reduce using rule 29 (expression -> variable .)
    VARIABLE_GLOBAL reduce using rule 29 (expression -> variable .)
    VARIABLE_INSTANCIA reduce using rule 29 (expression -> variable .)
    VARIABLE_CLASE  reduce using rule 29 (expression -> variable .)
    LBRACKET        reduce using rule 29 (expression -> variable .)
    LBRACE          reduce using rule 29 (expression -> variable .)
    $end            reduce using rule 29 (expression -> variable .)
    END             reduce using rule 29 (expression -> variable .)


state 14

    (21) if_statement -> IF . expression statement_list END
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . INTEGER
    (28) expression -> . STRING
    (29) expression -> . variable
    (30) expression -> . array
    (31) expression -> . array_access
    (32) expression -> . function_call
    (33) expression -> . binary_operation
    (34) expression -> . GETS
    (35) expression -> . hash
    (11) variable -> . VARIABLE_LOCAL
    (12) variable -> . VARIABLE_GLOBAL
    (13) variable -> . VARIABLE_INSTANCIA
    (14) variable -> . VARIABLE_CLASE
    (36) array -> . LBRACKET array_elements RBRACKET
    (39) array_access -> . VARIABLE_LOCAL LBRACKET INTEGER RBRACKET
    (45) function_call -> . VARIABLE_LOCAL LPAREN arg_list RPAREN
    (49) binary_operation -> . expression TIMES expression
    (50) binary_operation -> . expression BIGGER expression
    (40) hash -> . LBRACE hash_elements RBRACE

    NOT             shift and go to state 18
    INTEGER         shift and go to state 19
    STRING          shift and go to state 20
    GETS            shift and go to state 17
    VARIABLE_LOCAL  shift and go to state 43
    VARIABLE_GLOBAL shift and go to state 26
    VARIABLE_INSTANCIA shift and go to state 27
    VARIABLE_CLASE  shift and go to state 28
    LBRACKET        shift and go to state 29
    LBRACE          shift and go to state 30

    expression                     shift and go to state 41
    variable                       shift and go to state 42
    array                          shift and go to state 21
    array_access                   shift and go to state 22
    function_call                  shift and go to state 23
    binary_operation               shift and go to state 24
    hash                           shift and go to state 25

state 15

    (20) while_statement -> WHILE . expression DO statement_list END
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . INTEGER
    (28) expression -> . STRING
    (29) expression -> . variable
    (30) expression -> . array
    (31) expression -> . array_access
    (32) expression -> . function_call
    (33) expression -> . binary_operation
    (34) expression -> . GETS
    (35) expression -> . hash
    (11) variable -> . VARIABLE_LOCAL
    (12) variable -> . VARIABLE_GLOBAL
    (13) variable -> . VARIABLE_INSTANCIA
    (14) variable -> . VARIABLE_CLASE
    (36) array -> . LBRACKET array_elements RBRACKET
    (39) array_access -> . VARIABLE_LOCAL LBRACKET INTEGER RBRACKET
    (45) function_call -> . VARIABLE_LOCAL LPAREN arg_list RPAREN
    (49) binary_operation -> . expression TIMES expression
    (50) binary_operation -> . expression BIGGER expression
    (40) hash -> . LBRACE hash_elements RBRACE

    NOT             shift and go to state 18
    INTEGER         shift and go to state 19
    STRING          shift and go to state 20
    GETS            shift and go to state 17
    VARIABLE_LOCAL  shift and go to state 43
    VARIABLE_GLOBAL shift and go to state 26
    VARIABLE_INSTANCIA shift and go to state 27
    VARIABLE_CLASE  shift and go to state 28
    LBRACKET        shift and go to state 29
    LBRACE          shift and go to state 30

    expression                     shift and go to state 44
    variable                       shift and go to state 42
    array                          shift and go to state 21
    array_access                   shift and go to state 22
    function_call                  shift and go to state 23
    binary_operation               shift and go to state 24
    hash                           shift and go to state 25

state 16

    (22) puts_statement -> PUTS . arg_list
    (46) arg_list -> . expression
    (47) arg_list -> . expression COMMA arg_list
    (48) arg_list -> . empty
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . INTEGER
    (28) expression -> . STRING
    (29) expression -> . variable
    (30) expression -> . array
    (31) expression -> . array_access
    (32) expression -> . function_call
    (33) expression -> . binary_operation
    (34) expression -> . GETS
    (35) expression -> . hash
    (51) empty -> .
    (11) variable -> . VARIABLE_LOCAL
    (12) variable -> . VARIABLE_GLOBAL
    (13) variable -> . VARIABLE_INSTANCIA
    (14) variable -> . VARIABLE_CLASE
    (36) array -> . LBRACKET array_elements RBRACKET
    (39) array_access -> . VARIABLE_LOCAL LBRACKET INTEGER RBRACKET
    (45) function_call -> . VARIABLE_LOCAL LPAREN arg_list RPAREN
    (49) binary_operation -> . expression TIMES expression
    (50) binary_operation -> . expression BIGGER expression
    (40) hash -> . LBRACE hash_elements RBRACE

  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for GETS resolved as shift
  ! shift/reduce conflict for VARIABLE_LOCAL resolved as shift
  ! shift/reduce conflict for VARIABLE_GLOBAL resolved as shift
  ! shift/reduce conflict for VARIABLE_INSTANCIA resolved as shift
  ! shift/reduce conflict for VARIABLE_CLASE resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
    NOT             shift and go to state 18
    INTEGER         shift and go to state 19
    STRING          shift and go to state 20
    GETS            shift and go to state 17
    DEF             reduce using rule 51 (empty -> .)
    IF              reduce using rule 51 (empty -> .)
    WHILE           reduce using rule 51 (empty -> .)
    PUTS            reduce using rule 51 (empty -> .)
    $end            reduce using rule 51 (empty -> .)
    END             reduce using rule 51 (empty -> .)
    VARIABLE_LOCAL  shift and go to state 43
    VARIABLE_GLOBAL shift and go to state 26
    VARIABLE_INSTANCIA shift and go to state 27
    VARIABLE_CLASE  shift and go to state 28
    LBRACKET        shift and go to state 29
    LBRACE          shift and go to state 30

  ! VARIABLE_LOCAL  [ reduce using rule 51 (empty -> .) ]
  ! NOT             [ reduce using rule 51 (empty -> .) ]
  ! INTEGER         [ reduce using rule 51 (empty -> .) ]
  ! STRING          [ reduce using rule 51 (empty -> .) ]
  ! GETS            [ reduce using rule 51 (empty -> .) ]
  ! VARIABLE_GLOBAL [ reduce using rule 51 (empty -> .) ]
  ! VARIABLE_INSTANCIA [ reduce using rule 51 (empty -> .) ]
  ! VARIABLE_CLASE  [ reduce using rule 51 (empty -> .) ]
  ! LBRACKET        [ reduce using rule 51 (empty -> .) ]
  ! LBRACE          [ reduce using rule 51 (empty -> .) ]

    arg_list                       shift and go to state 45
    expression                     shift and go to state 46
    empty                          shift and go to state 47
    variable                       shift and go to state 42
    array                          shift and go to state 21
    array_access                   shift and go to state 22
    function_call                  shift and go to state 23
    binary_operation               shift and go to state 24
    hash                           shift and go to state 25

state 17

    (34) expression -> GETS .

    AND             reduce using rule 34 (expression -> GETS .)
    OR              reduce using rule 34 (expression -> GETS .)
    TIMES           reduce using rule 34 (expression -> GETS .)
    BIGGER          reduce using rule 34 (expression -> GETS .)
    DEF             reduce using rule 34 (expression -> GETS .)
    IF              reduce using rule 34 (expression -> GETS .)
    WHILE           reduce using rule 34 (expression -> GETS .)
    PUTS            reduce using rule 34 (expression -> GETS .)
    VARIABLE_LOCAL  reduce using rule 34 (expression -> GETS .)
    NOT             reduce using rule 34 (expression -> GETS .)
    INTEGER         reduce using rule 34 (expression -> GETS .)
    STRING          reduce using rule 34 (expression -> GETS .)
    GETS            reduce using rule 34 (expression -> GETS .)
    VARIABLE_GLOBAL reduce using rule 34 (expression -> GETS .)
    VARIABLE_INSTANCIA reduce using rule 34 (expression -> GETS .)
    VARIABLE_CLASE  reduce using rule 34 (expression -> GETS .)
    LBRACKET        reduce using rule 34 (expression -> GETS .)
    LBRACE          reduce using rule 34 (expression -> GETS .)
    $end            reduce using rule 34 (expression -> GETS .)
    END             reduce using rule 34 (expression -> GETS .)
    DO              reduce using rule 34 (expression -> GETS .)
    COMMA           reduce using rule 34 (expression -> GETS .)
    RPAREN          reduce using rule 34 (expression -> GETS .)


state 18

    (26) expression -> NOT . expression
    (24) expression -> . expression AND expression
    (25) expression -> . expression OR expression
    (26) expression -> . NOT expression
    (27) expression -> . INTEGER
    (28) expression -> . STRING
    (29) expression -> . variable
    (30) expression -> . array
    (31) expression -> . array_access
    (32) expression -> . function_call
    (33) expression -> . binary_operation
    (34) expression -> . GETS
    (35) expression -> . hash
    (11) variable -> . VARIABLE_LOCAL
    (12) variable -> . VARIABLE_GLOBAL
    (13) variable -> . VARIABLE_INSTANCIA
    (14) variable -> . VARIABLE_CLASE
    (36) array -> . LBRACKET array_elements RBRACKET
    (39) array_access -> . VARIABLE_LOCAL LBRACKET INTEGER RBRACKET
    (45) function_call -> . VARIABLE_LOCAL LPAREN arg_list RPAREN
    (49) binary_operation -> . expression TIMES expression
    (50) binary_operation -> . expression BIGGER expression
    (40) hash -> . LBRACE hash_elements RBRACE

    NOT             shift and go to state 18
    INTEGER         shift and go to state 19
    STRING          shift and go to state 20
    GETS            shift and go to state 17
    VARIABLE_LOCAL  shift and go to state 43
    VARIABLE_GLOBAL shift and go to state 26
    VARIABLE_INSTANCIA shift and go to state 27
    VARIABLE_CLASE  shift and go to state 28
    LBRACKET        shift and go to state 29
    LBRACE          shift and go to state 30

    expression                     shift and go to state 48
    variable                       shift and go to state 42
    array                          shift and go to state 21
    array_access                   shift and go to state 22
    function_call                  shift and go to state 23
    binary_operation               shift and go to state 24
    hash                           shift and go to state 25

state 19

    (27) expression -> INTEGER .
